<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/img_toss"
        android:layout_width="412dp"
        android:layout_height="280dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imgtoss" />

    <TextView
        android:id="@+id/txtHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/enter_one_1_for_head"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:textAllCaps="false"
        android:text="@string/enter_two_2_for_tail"
        android:textColor="@color/orange"
        android:textSize="17sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/img_toss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtHead"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnToss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/lgtGreen"
        android:text="@string/let_s_toss_it"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/img_toss"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHead"
        app:layout_constraintVertical_bias="0.948" />

    <EditText
        android:id="@+id/etValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="116dp"
        android:ems="10"
        android:hint="@string/enter_your_choice"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_toss" />

    <ImageView
        android:id="@+id/imgResult"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etValue"
        app:srcCompat="@drawable/backtoss"
        android:background="@drawable/back_ground"/>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:textColor="@color/red"
        android:textSize="31sp"
        android:visibility="invisible"
        android:gravity="center"
        android:text="@string/result"
        app:layout_constraintEnd_toEndOf="@+id/imgResult"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imgResult"
        app:layout_constraintTop_toBottomOf="@+id/imgResult"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>